Login page has correct background color both in light and dark mode #7731
Because our themes are shared across multiples sites they have a multiple
classes selector. And thus we cannot use simple interpolation to inject
multiple classes. Instead we must use the proper to way to merge two selectors
as described in https://github.com/sass/sass/issues/1425#issuecomment-55461403

--- a/client/app/_app.theme.scss
+++ b/client/app/_app.theme.scss
@@ -4,8 +4,12 @@
     $background: map-get($theme, background);
     $foreground: map-get($theme, foreground);
 
-    @at-root app-root#{&} > div {
-        background: mat-color($background, background);
+    // Splash logo and login page have different background than usual layout for other pages
+    // and they need to have the correct background color in dark mode (otherwise we get black text on black background)
+    @at-root #{selector-append(app-root, &)} {
+        & > div {
+            background: mat-color($background, background);
+        }
     }
 
     ng-progress {
